fixed nav overlapping scrollbar issue

--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -1,6 +1,7 @@
 .section-component {
   height: 100vh;
   scroll-snap-align: start;
+  scroll-padding: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
