--- a/scss/main.css
+++ b/scss/main.css
@@ -1,17 +1,12 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
-body {
-  overflow: hidden;
-}
-
-main {
-  overflow-y: auto;
-  height: 100vh;
+html {
   -ms-scroll-snap-type: y mandatory;
       scroll-snap-type: y mandatory;
 }
@@ -24,28 +19,46 @@ a {
 .section-component {
   height: 100vh;
   scroll-snap-align: start;
+  scroll-padding: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: aliceblue;
   font-size: 4rem;
 }
+
 .section-component h2 {
   font-weight: 200;
 }
+
 .section-component.one {
-  background-image: linear-gradient(to bottom, #bee9e8, #62b6cb);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#bee9e8ff), to(#62b6cbff));
+  background-image: linear-gradient(to bottom, #bee9e8ff, #62b6cbff);
 }
+
 .section-component.two {
-  background-image: linear-gradient(to bottom, #62b6cb, #5fa8d3);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#62b6cbff), to(#5fa8d3ff));
+  background-image: linear-gradient(to bottom, #62b6cbff, #5fa8d3ff);
 }
+
 .section-component.three {
-  background-image: linear-gradient(to bottom, #5fa8d3, #5798bd);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#5fa8d3ff), to(#5798bd));
+  background-image: linear-gradient(to bottom, #5fa8d3ff, #5798bd);
 }
+
 .section-component.four {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#5798bd), to(#518eb1));
   background-image: linear-gradient(to bottom, #5798bd, #518eb1);
 }
+
 .section-component.five {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#518eb1), to(#4e86a7));
   background-image: linear-gradient(to bottom, #518eb1, #4e86a7);
 }
 
@@ -63,21 +76,34 @@ h2 {
   --navBackground: #4e86a7;
   background: var(--navBackground);
 }
+
 .navigation-component .nav-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .navigation-component .nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   list-style-type: none;
 }
+
 .navigation-component .nav-links li {
   margin-left: 1.6rem;
 }
+
 .navigation-component .nav-links li a {
   padding: 0 0.5rem;
 }
+
 .navigation-component .logo {
   font-size: 3rem;
   margin-right: auto;
@@ -87,4 +113,5 @@ h2 {
 .container-structure {
   max-width: 1440px;
   margin: 0 auto;
-}/*# sourceMappingURL=main.css.map */
+}
+/*# sourceMappingURL=main.css.map */
